<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="stStationCfg" Id="{20ed7db3-5284-4bb1-bea7-527c1d0761f4}">
    <Declaration><![CDATA[TYPE stStationCfg :
STRUCT
	sName					: STRING;
	lrStartPosition			: LREAL;
	lrEndPosition			: LREAL;
	lrStopPosition			: ARRAY [1..3] OF LREAL;
	lrProcessingTime		: LREAL;
	uiNumStopPositions		: UDINT;
	lrTravelTime			: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>